# Basic-Engine

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  GEMINI.md  README.md
.ccls-cache/@@mnt@c@Dev@Basic-Engine/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@c++@9@backward@binders.h.blob  @usr@include@c++@9@bits@alloc_traits.h.blob  @usr@include@c++@9@bits@allocator.h.blob  @usr@include@c++@9@bits@basic_ios.h.blob  @usr@include@c++@9@bits@basic_ios.tcc.blob  @usr@include@c++@9@bits@basic_string.h.blob  @usr@include@c++@9@bits@basic_string.tcc.blob  @usr@include@c++@9@bits@char_traits.h.blob  @usr@include@c++@9@bits@concept_check.h.blob  @usr@include@c++@9@bits@cpp_type_traits.h.blob  @usr@include@c++@9@bits@cxxabi_forced.h.blob  @usr@include@c++@9@bits@cxxabi_init_exception.h.blob  @usr@include@c++@9@bits@exception.h.blob  @usr@include@c++@9@bits@exception_defines.h.blob  @usr@include@c++@9@bits@exception_ptr.h.blob  @usr@include@c++@9@bits@functexcept.h.blob  @usr@include@c++@9@bits@functional_hash.h.blob  @usr@include@c++@9@bits@hash_bytes.h.blob  @usr@include@c++@9@bits@ios_base.h.blob  @usr@include@c++@9@bits@istream.tcc.blob  @usr@include@c++@9@bits@locale_classes.h.blob  @usr@include@c++@9@bits@locale_classes.tcc.blob  @usr@include@c++@9@bits@locale_facets.h.blob  @usr@include@c++@9@bits@locale_facets.tcc.blob  @usr@include@c++@9@bits@localefwd.h.blob  @usr@include@c++@9@bits@memoryfwd.h.blob  @usr@include@c++@9@bits@move.h.blob  @usr@include@c++@9@bits@nested_exception.h.blob  @usr@include@c++@9@bits@ostream.tcc.blob  @usr@include@c++@9@bits@ostream_insert.h.blob  @usr@include@c++@9@bits@postypes.h.blob  @usr@include@c++@9@bits@predefined_ops.h.blob  @usr@include@c++@9@bits@ptr_traits.h.blob  @usr@include@c++@9@bits@range_access.h.blob  @usr@include@c++@9@bits@std_abs.h.blob  @usr@include@c++@9@bits@stl_algobase.h.blob  @usr@include@c++@9@bits@stl_bvector.h.blob  (+138 more)
.ccls-cache/@mnt@c@Dev@Basic-Engine/: Engine@Engine@src@core@include@memoryPool.h.blob  Engine@Engine@src@core@include@scene.h  Engine@Engine@src@core@include@scene.h.blob  Engine@Engine@src@core@include@sceneView.h.blob  Engine@Engine@src@core@src@memoryPool.cpp  Engine@Engine@src@core@src@memoryPool.cpp.blob  Engine@Engine@src@core@src@scene.cpp  Engine@Engine@src@core@src@scene.cpp.blob
Engine/Alix_1.1/: main.cpp
Engine/Alix_1.1/Alix_1.1/: Alix_1.1.vcxproj  Alix_1.1.vcxproj.filters
Engine/Alix_1.1/Alix_1.1/src/glad/: glad.c
Engine/Alix_1.1/Alix_1.1/src/graphics/: window.cpp  window.h
Engine/Alix_1.1/include/: shader.h  texture_loader.h
Engine/Alix_1.1/src/graphics/: shader.cpp  texture_loader.cpp
Engine/Alix_1.1/src/graphics/include/: camera.h  indexBuffer.h  renderer.h  shader.h  texture_loader.h  vertexBuffer.h  window.h
Engine/Alix_1.1/src/graphics/src/: camera.cpp  renderer.cpp  shader.cpp  texture_loader.cpp  vertexArray.cpp  vertexBuffer.cpp  window.cpp
Engine/Alix_1.1/src/shaders/: fragmentShader.glsl  lightVertexShader.glsl  vertexShader.glsl
Engine/Basic-Engine/: main.cpp
Engine/Basic-Engine/core/ext/: stb_image.cpp
Engine/Basic-Engine/core/graphics/include/: camera.h  indexBuffer.h  renderer.h  shader.h  vertexArray.h  window.h
Engine/Basic-Engine/core/graphics/src/: camera.cpp  indexBuffer.cpp  renderer.cpp  shader.cpp  vertexArray.cpp
Engine/Basic-Engine/src/graphics/include/: camera.h  renderer.h  shader.h  vertexArray.h  vertexBuffer.h  window.h
Engine/Basic-Engine/src/graphics/src/: camera.cpp  renderer.cpp  vertexBuffer.cpp  window.cpp
Engine/Basic-Engine/src/shaders/: fragmentShader.glsl  vertexShader.glsl
Engine/Engine/: Engine.vcxproj  Engine.vcxproj.filters
Engine/Engine/src/: mainEngine.cpp
Engine/Engine/src/core/include/: memoryPool.h  scene.h  sceneView.h
Engine/Engine/src/core/src/: memoryPool.cpp  scene.cpp  sceneView.cpp
Engine/Engine/x64/Debug/: Engine.exe.recipe  Engine.ilk  vc143.idb
Engine/Engine/x64/Debug/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Engine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Engine/Engine1.1/: engine.h  mainEngine.cpp
Engine/Engine1.1/core/: core.h
Engine/Engine1.1/core/include/: components.h  entity.h  physicsSystem.h  system.h
Engine/Engine1.1/core/src/: components.cpp  entity.cpp  system.cpp
Engine/Engine1.1/memory/include/: handle.h
Engine/Engine1.1/memory/src/: handle.cpp
Engine/Engine1.1/x64/Debug/: Engine1.1.exe.recipe
cmake/: FindGLFW3.cmake  FindGLM.cmake  Findglfw3.cmake  Findglm.cmake
